nullaway_error_379C3A27-2F61-4804-A144-1D74D5288DA5.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/web/cors/CorsConfiguration.java:257: error: [NullAway] dereferenced expression this.allowedOriginPatterns is @Nullable
			this.allowedOriginPatterns.add(new OriginPattern(value));
			                          ^
    (see http://t.uber.com/nullaway )
